<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        app:columnCount="4"
        app:rowCount="6">

        <Button
            android:id="@+id/button1"
            android:layout_width="88dp"
            android:layout_height="120dp"
            android:layout_margin="4dp"
            android:text="@string/button1"
            android:textColor="@android:color/black"
            android:backgroundTint="@android:color/transparent"
            android:drawablePadding="0dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="88dp"
            android:layout_height="120dp"
            android:layout_margin="4dp"
            android:text="@string/button2"
            android:textColor="@android:color/black"
            android:backgroundTint="@android:color/transparent"
            android:drawablePadding="0dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="88dp"
            android:layout_height="120dp"
            android:layout_margin="4dp"
            android:text="@string/button3"
            android:textColor="@android:color/black"
            android:backgroundTint="@android:color/transparent"
            android:drawablePadding="0dp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="88dp"
            android:layout_height="120dp"
            android:layout_margin="4dp"
            android:text="@string/button4"
            android:textColor="@android:color/black"
            android:backgroundTint="@android:color/transparent"
            android:drawablePadding="0dp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="88dp"
            android:layout_height="120dp"
            android:layout_margin="4dp"
            android:text="@string/button5"
            android:textColor="@android:color/black"
            android:backgroundTint="@android:color/transparent"
            android:drawablePadding="0dp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="88dp"
            android:layout_height="120dp"
            android:layout_margin="4dp"
            android:text="@string/button6"
            android:textColor="@android:color/black"
            android:backgroundTint="@android:color/transparent"
            android:drawablePadding="0dp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="88dp"
            android:layout_height="120dp"
            android:layout_margin="4dp"
            android:text="@string/button7"
            android:textColor="@android:color/black"
            android:backgroundTint="@android:color/transparent"
            android:drawablePadding="0dp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="88dp"
            android:layout_height="120dp"
            android:layout_margin="4dp"
            android:text="@string/button8"
            android:textColor="@android:color/black"
            android:backgroundTint="@android:color/transparent"
            android:drawablePadding="0dp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="88dp"
            android:layout_height="120dp"
            android:layout_margin="4dp"
            android:text="@string/button9"
            android:textColor="@android:color/black"
            android:backgroundTint="@android:color/transparent"
            android:drawablePadding="0dp" />

        <Button
            android:id="@+id/button10"
            android:layout_width="88dp"
            android:layout_height="120dp"
            android:layout_margin="4dp"
            android:text="@string/button10"
            android:textColor="@android:color/black"
            android:backgroundTint="@android:color/transparent"
            android:drawablePadding="0dp" />

        <Button
            android:id="@+id/button11"
            android:layout_width="88dp"
            android:layout_height="120dp"
            android:layout_margin="4dp"
            android:text="@string/button11"
            android:textColor="@android:color/black"
            android:backgroundTint="@android:color/transparent"
            android:drawablePadding="0dp" />

        <Button
            android:id="@+id/button12"
            android:layout_width="88dp"
            android:layout_height="120dp"
            android:layout_margin="4dp"
            android:text="@string/button12"
            android:textColor="@android:color/black"
            android:backgroundTint="@android:color/transparent"
            android:drawablePadding="0dp" />

        <Button
            android:id="@+id/button13"
            android:layout_width="88dp"
            android:layout_height="120dp"
            android:layout_margin="4dp"
            android:text="@string/button13"
            android:textColor="@android:color/black"
            android:backgroundTint="@android:color/transparent"
            android:drawablePadding="0dp" />

        <Button
            android:id="@+id/button14"
            android:layout_width="88dp"
            android:layout_height="120dp"
            android:layout_margin="4dp"
            android:text="@string/button14"
            android:textColor="@android:color/black"
            android:backgroundTint="@android:color/transparent"
            android:drawablePadding="0dp" />

        <Button
            android:id="@+id/button15"
            android:layout_width="88dp"
            android:layout_height="120dp"
            android:layout_margin="4dp"
            android:text="@string/button15"
            android:textColor="@android:color/black"
            android:backgroundTint="@android:color/transparent"
            android:drawablePadding="0dp" />

        <Button
            android:id="@+id/button16"
            android:layout_width="88dp"
            android:layout_height="120dp"
            android:layout_margin="4dp"
            android:text="@string/button16"
            android:textColor="@android:color/black"
            android:backgroundTint="@android:color/transparent"
            android:drawablePadding="0dp" />

        <Button
            android:id="@+id/button17"
            android:layout_width="88dp"
            android:layout_height="120dp"
            android:layout_margin="4dp"
            android:text="@string/button17"
            android:textColor="@android:color/black"
            android:backgroundTint="@android:color/transparent"
            android:drawablePadding="0dp" />

        <Button
            android:id="@+id/button18"
            android:layout_width="88dp"
            android:layout_height="120dp"
            android:layout_margin="4dp"
            android:text="@string/button18"
            android:textColor="@android:color/black"
            android:backgroundTint="@android:color/transparent"
            android:drawablePadding="0dp" />

        <Button
            android:id="@+id/button19"
            android:layout_width="88dp"
            android:layout_height="120dp"
            android:layout_margin="4dp"
            android:text="@string/button19"
            android:textColor="@android:color/black"
            android:backgroundTint="@android:color/transparent"
            android:drawablePadding="0dp" />

        <Button
            android:id="@+id/button20"
            android:layout_width="88dp"
            android:layout_height="120dp"
            android:layout_margin="4dp"
            android:text="@string/button20"
            android:textColor="@android:color/black"
            android:backgroundTint="@android:color/transparent"
            android:drawablePadding="0dp" />

        <Button
            android:id="@+id/button21"
            android:layout_width="88dp"
            android:layout_height="120dp"
            android:layout_margin="4dp"
            android:text="@string/button21"
            android:textColor="@android:color/black"
            android:backgroundTint="@android:color/transparent"
            android:drawablePadding="0dp" />

        <Button
            android:id="@+id/button22"
            android:layout_width="88dp"
            android:layout_height="120dp"
            android:layout_margin="4dp"
            android:text="@string/button22"
            android:textColor="@android:color/black"
            android:backgroundTint="@android:color/transparent"
            android:drawablePadding="0dp" />

        <Button
            android:id="@+id/button23"
            android:layout_width="88dp"
            android:layout_height="120dp"
            android:layout_margin="4dp"
            android:text="@string/button23"
            android:textColor="@android:color/black"
            android:backgroundTint="@android:color/transparent"
            android:drawablePadding="0dp" />

        <Button
            android:id="@+id/button24"
            android:layout_width="88dp"
            android:layout_height="120dp"
            android:layout_margin="4dp"
            android:text="@string/button24"
            android:textColor="@android:color/black"
            android:backgroundTint="@android:color/transparent"
            android:drawablePadding="0dp" />
    </androidx.gridlayout.widget.GridLayout>

    <ImageView
        android:id="@+id/schoolmap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/schoolmap"
        android:scaleType="fitXY"
        android:background="@android:color/transparent"/>
</FrameLayout>
